# ActTensor

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.md.bak  pyproject.toml  setup.cfg  setup.py
ActTensor_tf/: __init__.py  activations.py
act_tensor/: GLUbased.py  __init__.py  activations.py  functions.py  layers.py  test.py
help/: test.py
