[metadata]
name = act_tensor
version = 1.0.0
author = Double P Team
author_email = thedoublepteam@gmail.com
description = Activation Functions for TensorFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pouyaardehkhani/ActTensor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Tensorflow/Activation

[options]
packages = find:
python_requires = >=3.7
include_package_data = True