[metadata]
name = act_tensor
version = 1.0.0
author = Double P Team
author_email = thedoublepteam@gmail.com
description = Activation Functions for TensorFlow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pouyaardehkhani/ActTensor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Tensorflow/Activation
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >=3.7
include_package_data = True